<resources>
    <string name="app_name">Housing Guru</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="enter_login">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="search_by_filters">Поиск по фильтрам</string>
    <string name="reset">Сбросить</string>
    <string name="enter_city">Введите город</string>
    <string name="type">Тип</string>
    <string name="hotel">Отель</string>
    <string name="apartments">Апартаменты/квартира</string>
    <string name="villa">Вилла</string>
    <string name="hostel">Хостел</string>
    <string name="motel">Мотель</string>
    <string name="price_per_day">Цена за сутки</string>
    <string name="from">От:</string>
    <string name="before">До:</string>
    <string name="min_rating">Минимальный рейтинг</string>
    <string name="confirm">Принять</string>
</resources>