<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/tv_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:text="@string/search_by_filters"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/reset"
                android:textSize="20sp"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <EditText
            android:id="@+id/enterCity_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_city"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/hotel_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/hotel"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/apartment_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/apartments"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/villa_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/villa"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/hostel_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/hostel"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/motel_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:text="@string/motel"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/price_per_day"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/minPrice_et"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="number"
                android:hint="@string/from"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/blue"/>

            <EditText
                android:id="@+id/maxPrice_et"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="number"
                android:hint="@string/before"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/blue"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/min_rating"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5"/>

        <Button
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="Принять"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:backgroundTint="#0CA8CD"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>